// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Radius should render 1`] = `
.c0 {
  border-radius: 0.125rem;
  display: block;
}

<div>
  <div
    class="sc-AxiKw c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;

exports[`Colors should render 1`] = `
.c0 {
  background-color: #38b2ac;
  display: block;
}

<div>
  <div
    class="sc-AxiKw c0"
    data-testid="block"
  >
    Default Text
  </div>
</div>
`;
